# BSU

Java Git/: MainBig.java  Teylor.java  TeylorTest.java
Java Git/Lab1/: Main.java  TeylorBig.java
Java Git/Lab3/: AbstractFunc.java  BaseSaver.java  DataSaver.java  Fabrica.java  FileTest.java  FileWorker.java  Files.java  GUIApplication.java  Identifiable.java  JSONFile.java  JSONFileTest.java  JSONSaver.java  JarClass.java  ListMachine.java  ListMachineTest.java  Main.java  MapMachine.java  MapMachineTest.java  Menu.java  SaverDecorator.java  WashingMachine.java  WashingMachineTest.java  XMLFile.java  XMLFileTest.java  XMLSaver.java
OC/: Main.cpp
OC/CMakeLab1/: CMakeLists.txt  Creator.cpp  Reporter.cpp
OC/CMakeLab1/Lab1/: Creator.cpp  Main.cpp
OC/Lab 4/: CMakeLists.txt  common.h  receiver.cpp  sender.cpp  tests.cpp
OC/Lab1/: Creator.cpp  LabaTest1.cpp  Reported.cpp  employee.h
OC/Laba 2/: CMakeLists.txt  array_utils.cpp  array_utils.h  main.cpp  tests.cpp  threadHandler.cpp  threadHandler.h
OC/Laba 3/: CMakeLists.txt  main.cpp  marker.h  shared.h  unit_tests.cpp
OC/Laba 5/: CMakeLists.txt  CMakePresets.json  client.cpp  employee.h  server.cpp  tests.cpp
OC/OC Kolokvium/: CMakeLists.txt  dedup.cpp  dedup.h  errors.h  factorials.cpp  factorials.h  linked_list.cpp  linked_list.h  main.cpp  test_all.cpp
OC/OC Kolokvium 2/: app.py  cache.py  db_mongo.py  db_sqlite.py  models.py  repository.py  requirements.txt
Practica/Task 1/: flight.cpp  flight.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Practica/Task 3/: main.py
Practica/Unit/: test_fly.cpp
Гит 1 курс/1 семестр/: Лаба 8.cpp  Лаба6.cpp  Массивы.cpp  Тейлор.cpp
Гит 1 курс/2 семестр/: Лаб 1 РКПП.cpp
Гит 1 курс/2 семестр/Лаб 2 РКПП/: arr2.txt  arr3.txt
Гит 1 курс/2 семестр/Лаб 3 РКПП/: input.txt  output.txt
Гит 1 курс/2 семестр/Лаб 4 РКПП/: 1.txt  list.h  Лаб 4 РКПП.cpp
Гит 1 курс/2 семестр/Лаб 6 РКПП/: mainwindow.cpp
гит 1 сем/1 семестр/: Лаба 10.cpp  Лаба 4.cpp  Лаба 5.cpp  Лаба7.cpp
гит 1 сем/2 семестр/: Лаб 5 РКПП.cpp
гит 1 сем/2 семестр/Лаб 2 РКПП/: arr1.txt  struct1.txt  struct2.txt  students1.txt  Лаб 2 РКПП.cpp
гит 1 сем/2 семестр/Лаб 3 РКПП/: Лаб 3 РКПП.cpp
гит 1 сем/2 семестр/Лаб 4 РКПП/: input.txt  list.cpp
гит 1 сем/2 семестр/Лаб 6 РКПП/: mainwindow.h  Лаба 6.cpp
